@@ -38,6 +38,14 @@ ISDCFMetadata::ISDCFMetadata (shared_ptr<const cxml::Node> node)
 	studio = node->string_child ("Studio");
 	facility = node->string_child ("Facility");
 	package_type = node->string_child ("PackageType");
+
+	/* This stuff was added later */
+	temp_version = node->optional_bool_child ("TempVersion").get_value_or (false);
+	pre_release = node->optional_bool_child ("PreRelease").get_value_or (false);
+	red_band = node->optional_bool_child ("RedBand").get_value_or (false);
+	chain = node->optional_string_child ("Chain").get_value_or ("");
+	two_d_version_of_three_d = node->optional_bool_child ("TwoDVersionOfThreeD").get_value_or (false);
+	mastered_luminance = node->optional_string_child ("MasteredLuminance").get_value_or ("");
 }
 
 void
@@ -51,6 +59,12 @@ ISDCFMetadata::as_xml (xmlpp::Node* root) const
 	root->add_child("Studio")->add_child_text (studio);
 	root->add_child("Facility")->add_child_text (facility);
 	root->add_child("PackageType")->add_child_text (package_type);
+	root->add_child("TempVersion")->add_child_text (temp_version ? "1" : "0");
+	root->add_child("PreRelease")->add_child_text (pre_release ? "1" : "0");
+	root->add_child("RedBand")->add_child_text (red_band ? "1" : "0");
+	root->add_child("Chain")->add_child_text (chain);
+	root->add_child("TwoDVersionOfThreeD")->add_child_text (two_d_version_of_three_d ? "1" : "0");
+	root->add_child("MasteredLuminance")->add_child_text (mastered_luminance);
 }
 
 void
