@@ -32,6 +32,10 @@ class ISDCFMetadata
 public:
 	ISDCFMetadata ()
 		: content_version (1)
+		, temp_version (false)
+		, pre_release (false)
+		, red_band (false)
+		, two_d_version_of_three_d (false)
 	{}
 	
 	ISDCFMetadata (boost::shared_ptr<const cxml::Node>);
@@ -47,6 +51,18 @@ public:
 	std::string studio;
 	std::string facility;
 	std::string package_type;
+	/** true if this is a temporary version (without final picture or sound) */
+	bool temp_version;
+	/** true if this is a pre-release version (final picture and sound, but without accessibility features) */
+	bool pre_release;
+	/** true if this has adult content */
+	bool red_band;
+	/** specific theatre chain or event */
+	std::string chain;
+	/** true if this is a 2D version of content that also exists in 3D */
+	bool two_d_version_of_three_d;
+	/** mastered luminance if there are multiple versions distributed (e.g. 35, 4fl, 6fl etc.) */
+	std::string mastered_luminance;
 };
 
 #endif
